--- a/src/gui/Makefile
+++ b/src/gui/Makefile
@@ -4,9 +4,9 @@ LIBFLAGS=-L/opt/vc/lib -lbrcmEGL -lbrcmGLESv2 -ljpeg
 FONTLIB=/usr/share/fonts/truetype/ttf-dejavu
 FONTFILES=DejaVuSans.inc  DejaVuSansMono.inc DejaVuSerif.inc
 FFT_C = ./hello_fft/mailbox.c ./hello_fft/gpu_fft.c ./hello_fft/gpu_fft_base.c ./hello_fft/gpu_fft_twiddles.c ./hello_fft/gpu_fft_shaders.c
-all:	font2openvg fonts library rpidatvtouch rx_gpio tcanim tcanim1v16
+all:	font2openvg fonts library rpidatvtouch rx_gpio tcanim1v16
 
-libshapes.o:	libshapes.c shapes.h fontinfo.h fonts 
+libshapes.o:	libshapes.c shapes.h fontinfo.h fonts
 	gcc -O2 -Wall $(INCLUDEFLAGS) -c libshapes.c
 
 gopenvg:	openvg.go
@@ -34,20 +34,16 @@ clean:
 	indent -linux -c 60 -brf -l 132  libshapes.c oglinit.c shapes.h fontinfo.h
 
 library: oglinit.o libshapes.o
-	gcc $(LIBFLAGS) -shared -o libshapes.so oglinit.o libshapes.o 
+	gcc $(LIBFLAGS) -shared -o libshapes.so oglinit.o libshapes.o
 
 INCLUDEFLAGS2=-lpthread -I/opt/vc/include -I/opt/vc/include/interface/vmcs_host/linux -I/opt/vc/include/interface/vcos/pthreads -I..
-#LIBFLAGS2=-L/opt/vc/lib -lEGL -lGLESv2 -lbcm_host -lpthread  -ljpeg -lrt -lm -ldl -lfftw3f -lwiringPi
 LIBFLAGS2=-L/opt/vc/lib -lbrcmEGL -lbrcmGLESv2 -lbcm_host -lpthread  -ljpeg -lrt -lm -ldl -lfftw3f -lwiringPi
 
-rpidatvtouch: rpidatvtouch.c 
-	gcc -Wall $(INCLUDEFLAGS2) -o  rpidatvgui rpidatvtouch.c libshapes.o oglinit.o $(LIBFLAGS2) 
-	
-rx_gpio: rx_gpio.c 
-	gcc -Wall $(INCLUDEFLAGS2) -o  rx_gpio rx_gpio.c libshapes.o oglinit.o $(LIBFLAGS2)
+rpidatvtouch: rpidatvtouch.c
+	gcc -Wall $(INCLUDEFLAGS2) -o  rpidatvgui rpidatvtouch.c libshapes.o oglinit.o $(LIBFLAGS2)
 
-tcanim: tcanim.c
-	gcc -Wall $(INCLUDEFLAGS2) -o  tcanim tcanim.c  libshapes.o oglinit.o $(LIBFLAGS2)
+rx_gpio: rx_gpio.c
+	gcc -Wall $(INCLUDEFLAGS2) -o  rx_gpio rx_gpio.c libshapes.o oglinit.o $(LIBFLAGS2)
 
 tcanim1v16: tcanim1v16.c
 	gcc -Wall $(INCLUDEFLAGS2) -o  tcanim1v16 tcanim1v16.c  libshapes.o oglinit.o $(LIBFLAGS2)
@@ -56,7 +52,6 @@ install:
 	install -m 755 -p font2openvg /usr/bin/
 	cp rpidatvgui ../../bin/
 	cp rx_gpio ../../bin/
-	cp tcanim ../../bin
 	cp tcanim1v16 ../../bin
 	install -m 755 -p libshapes.so /usr/lib/libshapes.so.1.0.0
 	strip --strip-unneeded /usr/lib/libshapes.so.1.0.0
