Audio Sarsat et RTL_FM via web

--- a/scripts/configs/nginx.conf
+++ b/scripts/configs/nginx.conf
@@ -65,6 +65,10 @@ http {
 			alias /home/pi/tmp/screen.png;
 		}
 
+		location /stream/stream.html {
+						alias /home/pi/webroot/stream/stream.html;
+		}
+
         location /touchscreen/click {
             if ( $request_method !~ ^(POST)$ ) {
                 return 405;
