--- a/scripts/configs/nginx.conf
+++ b/scripts/configs/nginx.conf
@@ -66,7 +66,15 @@ http {
 		}
 
 		location /stream/stream.html {
-						alias /home/pi/webroot/stream/stream.html;
+			alias /home/pi/webroot/stream/stream.html;
+		}
+
+		location /log.html {
+			alias /home/pi/webroot/log.html;
+		}
+
+		location /touchscreen/decode.txt {
+			alias /home/pi/rpidatv/406/decode.txt;
 		}
 
         location /touchscreen/click {
